--- a/graphql-portal/public/index.html
+++ b/graphql-portal/public/index.html
@@ -38,7 +38,7 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/graphql-voyager/dist/voyager.css"
     />
-    <script src="https://cdn.jsdelivr.net/npm/graphql-voyager/dist/voyager.min.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/graphql-voyager/dist/voyager.min.js"></script>-->
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.24.1/themes/prism.min.css" rel="stylesheet" />
 
   </head>
